library/src/libqtextformat.h

typedef struct QTextLength QTextLength;
typedef struct QVariant QVariant;
QTextLength* QTextLength_new(QTextLength* other);
QTextLength* QTextLength_new2(QTextLength* other);
QTextLength* QTextLength_new3();
QTextLength* QTextLength_new4(int typeVal, double value);
QTextLength* QTextLength_new5(QTextLength* param1);
int QTextLength_Type(const QTextLength* self);
double QTextLength_Value(const QTextLength* self, double maximumLength);
double QTextLength_RawValue(const QTextLength* self);
bool QTextLength_OperatorEqual(const QTextLength* self, QTextLength* other);
bool QTextLength_OperatorNotEqual(const QTextLength* self, QTextLength* other);
QVariant* QTextLength_ToQVariant(const QTextLength* self);